--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [develop]
     # Only trigger when files in the doc directory change
-    paths: 
+    paths:
       - 'doc/**'
 
   # Allow manual running of this workflow from the Actions tab
@@ -51,18 +51,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Temporarily modify base path for GitHub Pages
-        run: |
-          echo "base: '/nexent/'" > docs/.vitepress/config.temp.mts
-          cat docs/.vitepress/config.mts >> docs/.vitepress/config.temp.mts
-          mv docs/.vitepress/config.mts docs/.vitepress/config.original.mts
-          mv docs/.vitepress/config.temp.mts docs/.vitepress/config.mts
-
-      - name: Build with VitePress
-        run: npm run docs:build
-
-      - name: Restore original config
-        run: mv docs/.vitepress/config.original.mts docs/.vitepress/config.mts
+      - name: Build with VitePress (with base /nexent/)
+        run: npm exec vitepress build docs --base /nexent/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
