--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -51,8 +51,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build with VitePress (with base /nexent/)
-        run: npm exec vitepress build docs --base /nexent/
+      - name: Build with VitePress
+        run: npm run docs:build
+        env:
+          GITHUB_PAGES: true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
