--- a/docker/.env.example
+++ b/docker/.env.example
@@ -60,7 +60,7 @@ REDIS_BACKEND_URL=redis://redis:6379/1
 
 # Model Engine Config
 MODEL_ENGINE_HOST=https://localhost:30555
-MODEL_ENGINE_APIKEY=model_engine_api_key
+MODEL_ENGINE_APIKEY=
 
 # Supabase Config
 DASHBOARD_USERNAME=supabase
