--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "input-otp": "1.4.1",
     "katex": "^0.16.11",
     "lucide-react": "^0.454.0",
+    "mermaid": "^11.12.0",
     "next": "15.4.5",
     "next-i18next": "^15.4.2",
     "next-themes": "^0.4.4",
