--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,7 +25,7 @@ data-process = [
     "celery>=5.3.6",
     "flower>=2.0.1",
     "nest_asyncio>=1.5.6",
-    "unstructured[csv,docx,pdf,pptx,xlsx,md]"
+    "unstructured[csv,docx,pdf,pptx,xlsx,md]==0.18.14"
 ]
 test = [
     "pytest",
