📝 Update Code Owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,5 @@
 # These owners will be the default owners for everything in the repo
-*       @Phinease @liutao12138 
+*       @Phinease
+
+doc/docs/zh/opensource-memorial-wall.md  @WMC001
+doc/docs/en/opensource-memorial-wall.md  @WMC001
